src/objects/NttDataEpa__Integration_Picklist__c.object
<CustomObject>
    <description>Values for integration picklists.</description>
    <fields>
        <fullName>NttDataEpa__External_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used for updates by Data Loader only.</description>
        <externalId>true</externalId>
        <inlineHelpText>Used for updates by Data Loader only.</inlineHelpText>
        <label>External Key</label>
        <length>9</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NttDataEpa__Integration_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this checkbox is checked, no value is available in the picklist in SFDC for this Integraton Value. Otherwise a picklist value must be provided.</description>
        <inlineHelpText>If this checkbox is checked, no value is available in the picklist in SFDC for this Integraton Value. Otherwise a picklist value must be provided.</inlineHelpText>
        <label>Integration Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NttDataEpa__Picklist_Mapping_External_ID__c</fullName>
        <formula>NttDataEpa__Picklist_Mapping__r.NttDataEpa__External_Key__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Picklist Mapping External ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NttDataEpa__Picklist_Mapping__c</fullName>
        <label>Picklist Mapping</label>
        <referenceTo>NttDataEpa__Picklist_Mapping__c</referenceTo>
        <relationshipLabel>Integration Picklists</relationshipLabel>
        <relationshipName>Integration_Picklists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NttDataEpa__Picklist_Value__c</fullName>
        <description>The picklist value from SFDC.</description>
        <label>Picklist Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Integration Picklist</label>
    <listViews>
        <fullName>NttDataEpa__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>NttDataEpa__Detail_View</fullName>
        <columns>NAME</columns>
        <columns>NttDataEpa__External_Key__c</columns>
        <columns>NttDataEpa__Integration_Only__c</columns>
        <columns>NttDataEpa__Picklist_Mapping__c</columns>
        <columns>NttDataEpa__Picklist_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>Detail View</label>
    </listViews>
    <nameField>
        <label>Integration Value</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Picklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>NttDataEpa__Integration_Only_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(NttDataEpa__Integration_Only__c) &amp;&amp; ( NttDataEpa__Integration_Only__c || ISBLANK( NttDataEpa__Picklist_Value__c ))</errorConditionFormula>
        <errorMessage>If Integration Only is not checked, you have to define a Picklist Value, otherwise you may or may not define a Picklist value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NttDataEpa__Integration_Value_Syntax</fullName>
        <active>true</active>
        <description>Checks the integration value syntax.</description>
        <errorConditionFormula>NOT(REGEX( Name , &quot;[A-Z0-9_]+&quot;))</errorConditionFormula>
        <errorMessage>The Integration Value may consist of latin upper cases, arabic numbers and underlines only.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NttDataEpa__Validate_External_Key_Syntax</fullName>
        <active>true</active>
        <description>Check that the syntax of the External Key is correct.</description>
        <errorConditionFormula>NOT(BEGINS(NttDataEpa__External_Key__c, &apos;IP-&apos;)) || NOT(ISNUMBER( RIGHT(NttDataEpa__External_Key__c, 6)))</errorConditionFormula>
        <errorMessage>The syntax of the external key must match IP-{000000}.</errorMessage>
    </validationRules>
</CustomObject>